# AOC

./: .gitignore  README.md
2024/: .gitignore
2024/day_01/src/: main.rs  part_1.rs  part_2.rs
2024/day_02/src/: main.rs  part_1.rs  part_2.rs
2024/day_03/src/: main.rs  part_1.rs  part_2.rs
2024/day_04/src/: main.rs  part_1.rs  part_2.rs
2024/day_05/src/: main.rs  part_1.rs  part_2.rs
aoc-2024/: Cargo.toml
aoc-2024/src/: lib.rs
aoc-2024/tests/: lib_tests.rs
